data/derived/comb/progs/unify/prog3852.ml.out
Characters 29-30:
  if xs::1 = 1 then 0;;
         ^
Error: This expression has type int but an expression was expected of type
         'a list
